--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -352,7 +352,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 102;
-  background-color: #fcfcfc;
+  background-color: rgb(var(--background-modal-filters));
   border-radius: 8px;
   box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.2);
 }
