--- a/src/index.css
+++ b/src/index.css
@@ -95,6 +95,13 @@ html[data-theme="light"] {
   --mainboard-scrollbar-track: 255, 255, 255; /* #FFFFFF */
   --button-add-column-text: 22, 22, 22; /* #161616 */
   --icon-plus-add-card: 255, 255, 255; /* #FFFFFF */
+  /* modal column*/
+  --background-modal_input: 252, 252, 252; /* #FCFCFC */
+  --text-color-modal_input: 22, 22, 22; /* #161616 */
+  --button-close-svg: 22, 22, 22; /* #161616 */
+  --field-border-modal: 190, 219, 176; /* #BEDBB0 */
+  --field-focus-modal: 50, 50, 50; /* #323232 */
+  --field-focus-modal-border: 157, 200, 136; /* #9DC888 */
 }
 
 html[data-theme="dark"] {
@@ -119,6 +126,13 @@ html[data-theme="dark"] {
   --mainboard-scrollbar-track: 22, 22, 22; /* #161616 */
   --button-add-column-text: 22, 22, 22; /* #161616 */
   --icon-plus-add-card: 255, 255, 255; /* #FFFFFF */
+  /* modal column*/
+  --background-modal_input: 21, 21, 21; /* 161616 */
+  --text-color-modal_input: 255, 255, 255; /* #FFFFFF */
+  --button-close-svg: 255, 255, 255; /* #FFFFFF */
+  --field-focus-modal: 255, 255, 255; /* #FFFFFF */
+  --field-border-modal: 190, 219, 176; /* #BEDBB0 */
+  --field-focus-modal-border: 157, 200, 136; /* #9DC888 */
 }
 
 html[data-theme="violet"] {
@@ -143,6 +157,13 @@ html[data-theme="violet"] {
   --mainboard-scrollbar-track: 255, 255, 255; /* #FFFFFF */
   --button-add-column-text: 255, 255, 255; /* #FFFFFF */
   --icon-plus-add-card: 22, 22, 22; /* #161616 */
+  /* modal column*/
+  --background-modal_input: 252, 252, 252; /* #FCFCFC */
+  --text-color-modal_input: 22, 22, 22; /* #161616 */
+  --button-close-svg: 22, 22, 22; /* #161616 */
+  --field-border-modal: 82, 85, 188; /* #5255BC */
+  --field-focus-modal: 74, 77, 171; /* #4A4DAB */
+  --field-focus-modal-border: 74, 77, 171; /* #4A4DAB */
 }
 
 /*
