--- a/src/components/ColumnModal/AddcolumnModal/ColModal.module.css
+++ b/src/components/ColumnModal/AddcolumnModal/ColModal.module.css
@@ -11,7 +11,7 @@
 }
 
 .content {
-  background-color: rgb(var(--background-mainboard));
+  background-color: rgb(var(--background-modal_input));
   padding: 24px;
   border-radius: 8px;
   width: 335px;
@@ -30,7 +30,7 @@
 }
 
 .text {
-  color: rgb(var(--text-color-mainboard));
+  color: rgb(var(--text-color-modal_input));
   font-family: Poppins, medium;
   font-size: 18px;
   margin: 0;
@@ -40,16 +40,17 @@
   background-color: transparent;
   right: 18px;
   top: 18px;
+  font-size: 18px;
   position: absolute;
-  color: rgb(var(--text-color-mainboard));
+  color: rgb(var(--button-close-svg));
   border: none;
   padding: 0;
 }
 
-.svg {
+/* .svg {
   font-size: 18px;
-  stroke: rgb(var(--button-color-mainboard));
-}
+  stroke: rgb(var(--button-close-svg));
+} */
 
 .field {
   width: 100%;
@@ -59,22 +60,22 @@
   font-family: Poppins, regular;
   letter-spacing: -0.28px;
   background-color: rgb(var(--background-mainboard));
-  border: 1px solid rgb(190, 219, 176);
+  border: 1px solid rgb(var(--field-border-modal));
   box-shadow: rgba(22, 22, 22, 0.08) 0px 4px 16px;
   outline: none;
   border-radius: 8px;
-  color: rgb(var(--text-color-mainboard));
+  color: rgb(var(--text-color-modal_input));
   transition: 250ms;
   opacity: 0.4;
   margin-top: 24px;
 }
 .field::placeholder {
-  color: rgb(var(--text-color-mainboard));
+  color: rgb(var(--text-color-modal_input));
 }
 .field:focus {
-  color: rgb(50, 50, 50); /* Darker text color */
+  color: rgb(var(--field-focus-modal)); /* Darker text color */
   opacity: 1; /* Make the field fully opaque on focus */
-  border-color: #9DC888; /* Optional: change border color on focus */
+  border-color: rgb(var(--field-focus-modal-border)); /* Optional: change border color on focus */
 }
 
 .button {
@@ -93,7 +94,7 @@
 }
 
 .button:hover {
-  background-color: #9DC888;
+  background-color: rgb(var(--field-focus-modal-border));
   transition-delay: 150ms;
 }
 
