--- a/src/components/ColumnModal/EditColumnModal/EditModal.module.css
+++ b/src/components/ColumnModal/EditColumnModal/EditModal.module.css
@@ -1,113 +1,114 @@
 .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.3);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .content {
-    background-color: rgb(var(--background-mainboard));
-    padding: 24px;
-    border-radius: 8px;
-    width: 335px;
-    height: 221px;
-    max-width: 90%;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    position: relative;
-    border: 1px, ;
-  }
-  
-  .header {
-    left: 24px;
-    top: 24px;
-    width: auto;
-    height: 27px;
-  }
-  
-  .text {
-    color: rgb(var(--text-color-mainboard));
-    font-family: Poppins, medium;
-    font-size: 18px;
-    margin: 0;
-  }
-  
-  .buttonClose {
-    background-color: transparent;
-    right: 18px;
-    top: 18px;
-    position: absolute;
-    color: rgb(var(--text-color-mainboard));
-    border: none;
-    padding: 0;
-  }
-  
-  .svg {
-    font-size: 18px;
-    stroke: rgb(var(--button-color-mainboard));
-  }
-  
-  .field {
-    width: 100%;
-    height: 49px;
-    padding: 14px 18px;
-    font-size: 14px;
-    font-family: Poppins, regular;
-    letter-spacing: -0.28px;
-    background-color: rgb(var(--background-mainboard));
-    border: 1px solid rgb(190, 219, 176);
-    box-shadow: rgba(22, 22, 22, 0.08) 0px 4px 16px;
-    outline: none;
-    border-radius: 8px;
-    color: rgb(var(--text-color-mainboard));
-    transition: 250ms;
-    opacity: 0.4;
-    margin-top: 24px;
-  }
-  .field::placeholder {
-    color: rgb(var(--text-color-mainboard));
-  }
-  .field:focus {
-    color: rgb(50, 50, 50); /* Darker text color */
-    opacity: 1; /* Make the field fully opaque on focus */
-    border-color: #9DC888; /* Optional: change border color on focus */
-  }
-  
-  .button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    background-color: rgb(var(--button-color-modal));
-    color: black;
-    border: none;
-    border-radius: 8px;
-    padding: 12px 0;
-    font-size: 16px;
-    margin-top: 24px;
-    transition: background-color 200ms ease;
-  }
-  
-  .button:hover {
-    background-color: #9DC888;
-    transition-delay: 150ms;
-  }
-  
-  .svgWrapper{
-    width: 28px;
-     height: 28px;
-     background-color: rgb(var(--text-color-mainboard));
-     border-radius: 6px;
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     margin-right: 8px;
-   }
-  
-  .icon{
-    stroke: rgb(var(--button-color-mainboard));
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.3);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.content {
+  background-color: rgb(var(--background-modal_input));
+  padding: 24px;
+  border-radius: 8px;
+  width: 335px;
+  height: 221px;
+  max-width: 90%;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  position: relative;
+  border: 1px, ;
+}
+
+.header {
+  left: 24px;
+  top: 24px;
+  width: auto;
+  height: 27px;
+}
+
+.text {
+  color: rgb(var(--text-color-modal_input));
+  font-family: Poppins, medium;
+  font-size: 18px;
+  margin: 0;
+}
+
+.buttonClose {
+  background-color: transparent;
+  right: 18px;
+  top: 18px;
+  font-size: 18px;
+  position: absolute;
+  color: rgb(var(--button-close-svg));
+  border: none;
+  padding: 0;
+}
+
+/* .svg {
+  font-size: 18px;
+  stroke: rgb(var(--button-close-svg));
+} */
+
+.field {
+  width: 100%;
+  height: 49px;
+  padding: 14px 18px;
+  font-size: 14px;
+  font-family: Poppins, regular;
+  letter-spacing: -0.28px;
+  background-color: rgb(var(--background-mainboard));
+  border: 1px solid rgb(var(--field-border-modal));
+  box-shadow: rgba(22, 22, 22, 0.08) 0px 4px 16px;
+  outline: none;
+  border-radius: 8px;
+  color: rgb(var(--text-color-modal_input));
+  transition: 250ms;
+  opacity: 0.4;
+  margin-top: 24px;
+}
+.field::placeholder {
+  color: rgb(var(--text-color-modal_input));
+}
+.field:focus {
+  color: rgb(var(--field-focus-modal)); /* Darker text color */
+  opacity: 1; /* Make the field fully opaque on focus */
+  border-color: rgb(var(--field-focus-modal-border)); /* Optional: change border color on focus */
+}
+
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  background-color: rgb(var(--button-color-modal));
+  color: black;
+  border: none;
+  border-radius: 8px;
+  padding: 12px 0;
+  font-size: 16px;
+  margin-top: 24px;
+  transition: background-color 200ms ease;
+}
+
+.button:hover {
+  background-color: rgb(var(--field-focus-modal-border));
+  transition-delay: 150ms;
+}
+
+.svgWrapper{
+  width: 28px;
+   height: 28px;
+   background-color: rgb(var(--text-color-mainboard));
+   border-radius: 6px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   margin-right: 8px;
+ }
+
+.icon{
+  stroke: rgb(var(--button-color-mainboard));
+}
