--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -277,6 +277,15 @@
   }
 }
 
+.side_helpBtn {
+  transition: all 200ms ease-in-out;
+}
+
+.side_help_text:hover .side_helpBtn {
+  letter-spacing: 0.6px;
+  transform: scale(1.02);
+}
+
 @media screen and (max-width: 768px) {
   .side {
     position: absolute;
