--- a/src/components/DeleteBoardForm/DeleteBoardForm.module.css
+++ b/src/components/DeleteBoardForm/DeleteBoardForm.module.css
@@ -4,7 +4,7 @@
   border-radius: 8px;
   background: rgb(var(--background-hover-board));
   padding: 24px;
-  border: 1px solid rgb(var(--button-color-modal));
+  border: 1px solid rgb(var(--button-color-modal), 0.5);
   padding: 40px 20px;
 }
 
