--- a/src/components/EditUserProfile/EditUserProfile.module.css
+++ b/src/components/EditUserProfile/EditUserProfile.module.css
@@ -7,7 +7,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 24px;
-  z-index: 100;
+  z-index: 103;
   border-radius: 8px;
   background: rgb(var(--background-modal-filters));
   box-shadow: 0px 4px 16px 0px rgba(22, 22, 22, 0.05);
@@ -169,9 +169,7 @@
   &:hover,
   &:focus {
     background: #9dc888;
-    transition:
-      opacity 0.3s ease,
-      max-height 0.3s ease;
+    transition: opacity 0.3s ease, max-height 0.3s ease;
   }
 }
 
