--- a/src/components/Backdrop/Backdrop.module.css
+++ b/src/components/Backdrop/Backdrop.module.css
@@ -6,4 +6,10 @@
   height: 100%;
   background: rgba(0, 0, 0, 0.75);
   z-index: 101;
+  opacity: 0;
+  transition: opacity 300ms ease-out;
+}
+
+.backdrop.show {
+  opacity: 1;
 }
