--- a/src/components/MainBoard/ScreensPage/ScreensPage.module.css
+++ b/src/components/MainBoard/ScreensPage/ScreensPage.module.css
@@ -9,6 +9,8 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+
+  background-image: url("/src/images/backgrounds-desk/bg1-des-boat.jpg");
 }
 
 .header {
