--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -43,7 +43,6 @@
   max-width: 287px;
   width: 100%;
   height: 49px;
-  border-radius: 8px;
   border: none;
   background: #bedbb0;
   color: #161616;
@@ -53,11 +52,52 @@
   line-height: normal;
   letter-spacing: -0.02em;
   transition: all 200ms ease-in-out;
+  position: relative;
+  border: 1px solid currentColor;
+  border-radius: 12px;
+  padding: 0px 14px;
+  transition-property: border-color;
+  transition-duration: 0.2s;
+  transition: all 200ms ease-in-out;
+
+  &:hover,
+  &:focus-visible {
+    border-color: transparent;
+    transform: scale(1.03);
+    letter-spacing: 0.3px;
+
+    &::before {
+      opacity: 1;
+    }
+  }
+
+  &:active {
+    &::after {
+      opacity: 1;
+    }
+  }
 }
 
-.btn:hover {
-  transform: scale(1.03);
-  letter-spacing: 0.3px;
+.btn::before,
+.btn::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: inherit;
+  opacity: 0;
+  transition-property: opacity;
+}
+
+.btn::before {
+  box-shadow: 0 0 2px #fff, 0 -2px 6px #9dc888, 2px 0 6px #9dc888,
+    -2px 0 6px #9dc888, 0 2px 6px #9dc888;
+  transition-duration: 0.2s;
+}
+
+.btn::after {
+  box-shadow: 0 0 8px 4px #fff, 0 -4px 12px 4px #9dc888, 0 4px 12px 4px #9dc888,
+    -4px 0 12px 4px #9dc888, 4px 0 12px 4px #9dc888;
+  transition-duration: 0.4s;
 }
 
 .passwordWrapper {
