--- a/src/pages/WelcomePage/WelcomePage.module.css
+++ b/src/pages/WelcomePage/WelcomePage.module.css
@@ -83,30 +83,155 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-  letter-spacing: -0.02em;
   margin-bottom: 14px;
-  transition: all 200ms ease-in-out;
+  -webkit-tap-highlight-color: transparent;
+  --neon: #7b7ede;
+  box-sizing: border-box;
+  display: block;
+  outline: 4px solid #fff;
+  outline-offset: -4px;
+  overflow: hidden;
+  position: relative;
+  text-transform: uppercase;
+  transition: 0.2s linear 0.1s;
+}
+
+.welcomeRegBtn,
+.welcomeRegBtn *,
+.welcomeRegBtn :after,
+.welcomeRegBtn :before,
+.welcomeRegBtn:after,
+.welcomeRegBtn:before {
+  border: 0 solid;
+  box-sizing: border-box;
+}
+
+.welcomeRegBtn:-moz-focusring {
+  outline: auto;
+}
+
+.welcomeRegBtn [hidden] {
+  display: none;
 }
 
 .welcomeRegBtn:hover {
-  transform: scale(1.03);
-  letter-spacing: 0.3px;
+  background: var(--neon);
+  box-shadow: 0 0 5px var(--neon), 0 0 25px var(--neon), 0 0 50px var(--neon),
+    0 0 100px var(--neon);
+  color: #fff;
+  outline-color: transparent;
+  transition: 0.2s linear 0.6s;
+}
+
+.welcomeRegBtn span {
+  display: block;
+  inset: 0;
+  position: absolute;
+}
+
+.welcomeRegBtn .top {
+  border-top: 4px solid var(--neon);
+  opacity: 0;
+  transform: translateX(calc(-100% + var(--progress, 0%)));
+  transition: none;
+}
+
+.welcomeRegBtn:hover .top {
+  --progress: 100%;
+  opacity: 1;
+  transition: transform 0.2s linear;
+}
+
+.welcomeRegBtn .right {
+  border-right: 4px solid var(--neon);
+  opacity: 0;
+  transform: translateY(calc(-100% + var(--progress, 0%)));
+  transition: none;
+}
+
+.welcomeRegBtn:hover .right {
+  --progress: 100%;
+  opacity: 1;
+  transition: transform 0.2s linear 0.2s;
+}
+
+.welcomeRegBtn .bottom {
+  border-bottom: 4px solid var(--neon);
+  opacity: 0;
+  transform: translateX(calc(100% - var(--progress, 0%)));
+  transition: none;
+}
+
+.welcomeRegBtn:hover .bottom {
+  --progress: 100%;
+  opacity: 1;
+  transition: transform 0.2s linear 0.4s;
+}
+
+.welcomeRegBtn .left {
+  border-left: 4px solid var(--neon);
+  opacity: 0;
+  transform: translateY(calc(100% - var(--progress, 0%)));
+  transition: none;
+}
+
+.welcomeRegBtn:hover .left {
+  --progress: 100%;
+  opacity: 1;
+  transition: transform 0.2s linear 0.6s;
 }
 
 .welcomeLogBtn {
-  text-decoration: none;
+  position: relative;
+  border: 1px solid #7b7ede;
+  border-radius: 12px;
+  padding: 0px 14px;
+  transition-property: border-color;
+  transition-duration: 0.2s;
+  cursor: pointer;
   color: #161616;
   font-size: 14px;
   font-weight: 500;
   letter-spacing: -0.02em;
   transition: all 200ms ease-in-out;
+
+  &:hover,
+  &:focus-visible {
+    border-color: transparent;
+
+    &::before {
+      opacity: 1;
+    }
+  }
+
+  &:active {
+    &::after {
+      opacity: 1;
+    }
+  }
 }
 
-.welcomeLogBtn:hover {
-  transform: scale(1.03);
-  letter-spacing: 0.3px;
+.welcomeLogBtn::before,
+.welcomeLogBtn::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: inherit;
+  opacity: 0;
+  transition-property: opacity;
 }
 
+.welcomeLogBtn::before {
+  box-shadow: 0 0 2px #fff, 0 -2px 6px #7b7ede, 2px 0 6px #7b7ede,
+    -2px 0 6px #7b7ede, 0 2px 6px #7b7ede;
+  transition-duration: 0.2s;
+}
+
+.welcomeLogBtn::after {
+  box-shadow: 0 0 8px 4px #fff, 0 -4px 12px 4px #7b7ede, 0 4px 12px 4px #7b7ede,
+    -4px 0 12px 4px #7b7ede, 4px 0 12px 4px #7b7ede;
+  transition-duration: 0.4s;
+}
 /* ===============MEDIA 768============== */
 
 @media screen and (min-width: 768px) {
