--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,13 +1,3 @@
-@keyframes modalSlideIn {
-  0% {
-    opacity: 0;
-    transform: translate(-50%, -40%);
-  }
-  100% {
-    opacity: 1;
-    transform: translate(-50%, -50%);
-  }
-}
 .side {
   width: 260px;
   background-color: rgb(var(--background-sidebar));
@@ -30,22 +20,10 @@
   margin-left: 24px;
   display: flex;
   gap: 8px;
+  font-size: 16px;
   align-items: center;
   color: rgb(var(--text-color-sidebar-and-header));
-  --fill-color: rgb(var(--text-color-sidebar-and-header));
-  position: relative;
-  font: 500 1.5rem Poppins, sans-serif;
-  text-decoration: none;
-  text-transform: uppercase;
-  -webkit-text-stroke: 2px var(--fill-color);
-  background: linear-gradient(var(--fill-color) 0 100%) left / 0 no-repeat;
-  color: transparent;
-  background-clip: text;
-  transition: 0.5s linear;
-
-  &:hover {
-    background-size: 100%;
-  }
+  font-weight: 600;
 }
 
 .logo_container {
@@ -154,14 +132,10 @@
 }
 
 .active .board_item_svg {
-  fill: rgb(var(--text-color-sidebar-and-header));
+  stroke: rgb(var(--text-color-sidebar-and-header));
 }
 
 .board_item_title {
-  transition: all 250ms ease-in-out;
-}
-
-.board_item_svg {
   transition: all 250ms ease-in-out;
 }
 
@@ -175,7 +149,9 @@
     font-weight: 500;
   }
   svg {
-    fill: rgb(var(--text-color-sidebar-and-header), 0.5);
+    fill: transparent;
+    stroke: rgb(var(--text-color-sidebar-and-header), 0.5);
+    transition: all 250ms ease-in-out;
   }
 }
 
@@ -187,6 +163,11 @@
 .board_svg {
   stroke: rgb(var(--text-color-sidebar-and-header), 0.5);
   fill: transparent;
+  transition: all 200ms ease-in-out;
+}
+
+.board_svg:hover {
+  stroke: rgb(var(--text-color-sidebar-and-header));
 }
 
 .board_list_container {
@@ -391,11 +372,10 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 103;
-  background-color: rgb(var(--background-modal-filters));
+  z-index: 102;
+  background-color: #fcfcfc;
   border-radius: 8px;
   box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.2);
-  animation: modalSlideIn 400ms ease-out forwards;
 }
 
 .iconButton {
