--- a/src/components/MainBoard/ScreensPage/ScreensPage.module.css
+++ b/src/components/MainBoard/ScreensPage/ScreensPage.module.css
@@ -9,8 +9,6 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-
-  background-image: url("/src/images/backgrounds-desk/bg1-des-boat.jpg");
 }
 
 .header {
@@ -31,6 +29,13 @@
   display: flex;
   padding: 10px;
   position: relative;
+}
+
+.colorRingWrapper {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50% -50%);
 }
 
 .scrollbarColumn {
