--- a/src/components/EditUserProfile/EditUserProfile.module.css
+++ b/src/components/EditUserProfile/EditUserProfile.module.css
@@ -23,6 +23,7 @@
   border-radius: 8px;
   background: rgb(var(--background-modal-filters));
   box-shadow: 0px 4px 16px 0px rgba(22, 22, 22, 0.05);
+  border: 1px solid rgb(var(--svglogout), 0.5);
   animation: modalSlideIn 300ms ease-out forwards;
 }
 
