--- a/src/components/ColumnModal/AddcolumnModal/ColModal.module.css
+++ b/src/components/ColumnModal/AddcolumnModal/ColModal.module.css
@@ -1,26 +1,25 @@
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.75);
-  display: flex;
-  align-items: center;
-  z-index: 100;
-  justify-content: center;
+@keyframes modalSlideIn {
+  0% {
+    opacity: 0;
+    transform: translate(-50%, -40%);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
 }
-
 .content {
   background-color: rgb(var(--background-modal_input));
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   padding: 24px;
-  border-radius: 8px;
-  width: 335px;
-  height: 221px;
+  z-index: 103;
   max-width: 90%;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  position: relative;
   border: 1px solid rgb(var(--svglogout), 0.5);
+  animation: modalSlideIn 300ms ease-out forwards;
 }
 
 .header {
