--- a/src/components/HelpModal/HelpModal.module.css
+++ b/src/components/HelpModal/HelpModal.module.css
@@ -1,8 +1,20 @@
+@keyframes modalSlideIn {
+  0% {
+    opacity: 0;
+    transform: translate(-50%, -40%);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
+}
+
 .content {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  animation: modalSlideIn 300ms ease-out forwards;
   z-index: 101; /* Выше backdrop */
   background-color: rgb(var(--background-mainboard));
   padding: 24px;
