--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -1,3 +1,13 @@
+@keyframes modalSlideIn {
+  0% {
+    opacity: 0;
+    transform: translate(-50%, -40%);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
+}
 .logPage {
   width: 100%;
   height: 100vh;
@@ -25,6 +35,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   overflow: hidden;
+  animation: modalSlideIn 300ms ease-out forwards;
 }
 
 .nav {
