--- a/src/components/ColumnModal/EditColumnModal/EditModal.module.css
+++ b/src/components/ColumnModal/EditColumnModal/EditModal.module.css
@@ -9,6 +9,7 @@
   align-items: center;
   z-index: 100;
   justify-content: center;
+  cursor: default;
 }
 
 .content {
@@ -16,7 +17,7 @@
   padding: 24px;
   border-radius: 8px;
   width: 335px;
-  height: 221px;
+  max-height: 100%;
   max-width: 90%;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   position: relative;
@@ -35,6 +36,7 @@
   font-family: Poppins, medium;
   font-size: 18px;
   margin: 0;
+  text-align: start;
 }
 
 .buttonClose {
@@ -60,7 +62,7 @@
   box-shadow: rgba(22, 22, 22, 0.08) 0px 4px 16px;
   outline: none;
   border-radius: 8px;
-  color: rgb(var(--field-focus-modal));
+  color: rgb(var(--text-color-mainboard));
   transition: all 250ms ease-in-out;
   opacity: 0.4;
   margin-top: 24px;
@@ -69,6 +71,12 @@
 .field:focus,
 .field:hover {
   opacity: 1;
+}
+
+.errorMessage {
+  color: red;
+  text-align: start;
+  margin-top: 2px;
 }
 
 .button {
