--- a/src/components/MainBoard/Card/Card.module.css
+++ b/src/components/MainBoard/Card/Card.module.css
@@ -2,12 +2,15 @@
   position: relative;
   padding: 14px 20px 14px 24px;
   display: flex;
+  flex-shrink: 0;
   flex-direction: column;
   justify-content: center;
   align-items: baseline;
   max-height: 154px;
   background-color: rgb(var(--button-color-mainboard));
   border-radius: 8px;
+  overflow: hidden;
+  max-width: 334px;
 }
 
 .taskContainer::before {
@@ -30,14 +33,16 @@
 }
 
 .descr {
-  /* max-height: 34px; */
+  width: 100%;
   overflow: hidden;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.33;
   letter-spacing: -0.02em;
 }
+
 .descr span {
+  word-break: break-word;
   color: rgba(var(--text-task-descr));
 }
 .optionsContainer {
