--- a/src/components/MainBoard/ScreensPage/ScreensPage.module.css
+++ b/src/components/MainBoard/ScreensPage/ScreensPage.module.css
@@ -50,7 +50,8 @@
   width: 100%;
   height: 100%;
   flex-shrink: 0;
-  overflow-x: scroll;
+  overflow-x: auto;
+  white-space: nowrap;
   padding-bottom: 10px;
   margin-bottom: -10px;
 }
@@ -76,6 +77,7 @@
 /* Ползунок (Thumb) */
 .scrollbarColumn::-webkit-scrollbar-thumb {
   background-color: rgba(var(--mainboard-scrollbar-thumb-x));
+  color: rgba(var(--mainboard-scrollbar-thumb-x));
   /* Основной цвет ползунка */
   border-radius: 12px;
   /* Радиус ползунка */
