--- a/src/components/MainBoard/ScreensPage/ScreensPage.module.css
+++ b/src/components/MainBoard/ScreensPage/ScreensPage.module.css
@@ -51,7 +51,6 @@
   height: 100%;
   flex-shrink: 0;
   overflow-x: auto;
-  white-space: nowrap;
   padding-bottom: 10px;
   margin-bottom: -10px;
 }
@@ -68,25 +67,18 @@
   height: 12px;
 }
 
-/* Фон полосы прокрутки */
 .scrollbarColumn::-webkit-scrollbar-track {
   background-color: rgb(var(--mainboard-scrollbar-track-x));
   border-radius: 12px;
 }
 
-/* Ползунок (Thumb) */
 .scrollbarColumn::-webkit-scrollbar-thumb {
   background-color: rgba(var(--mainboard-scrollbar-thumb-x));
-  color: rgba(var(--mainboard-scrollbar-thumb-x));
-  /* Основной цвет ползунка */
   border-radius: 12px;
-  /* Радиус ползунка */
 }
 
-/* Ползунок при наведении */
 .scrollbarColumn::-webkit-scrollbar-thumb:hover {
-  background-color: #555555;
-  /* Цвет ползунка при наведении */
+  background-color: rgba(var(--button-add-column), 0.7);
 }
 
 .button {
