--- a/src/components/MainBoard/InProgress/InProgress.module.css
+++ b/src/components/MainBoard/InProgress/InProgress.module.css
@@ -1,82 +1,83 @@
-.btnOptions {
-  cursor: pointer;
-  border: none;
-  display: flex;
-  justify-content: center;
-  align-self: center;
-  background-color: transparent;
-  position: relative;
-  border: none;
-}
-
-.icon {
-  transition: all 200ms ease-in-out;
-  fill: none;
-  stroke: rgba(var(--text-color-mainboard), 0.5);
-}
-
-.iconBell {
-  stroke: rgba(var(--button-color-modal));
-  filter: drop-shadow(0 0 6px rgba(var(--button-color-modal)));
-}
-
-.iconBellLose {
-  stroke: red;
-  filter: drop-shadow(0 0 6px red);
-}
-
-.icon:hover {
-  stroke: rgba(var(--text-color-mainboard));
-}
-
 .modalOverlay {
   position: absolute;
   top: 0;
-  left: 0;
+  right: 85px;
   background-color: rgb(var(--background-modal-filters));
-  max-width: 100%;
+  width: 100px;
   z-index: 1000;
   border: 1px solid rgb(var(--button-color-modal));
   border-radius: 8px;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  gap: 8px;
+  width: 50%;
+  /* box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); */
+  box-shadow: 0px 4px 16px 0px #1111111a;
+}
+
+.inProgress_wrap {
   padding: 18px;
-}
-
-.column_btnChoice {
-  border: none;
-  width: 100%;
-  font-weight: 400;
-  display: block;
-  font-size: 14px;
-  letter-spacing: -0.02em;
-  color: rgb(var(--radio-button));
-  cursor: pointer;
-  transition: transform 100ms ease-in-out;
   display: flex;
-  justify-content: center;
-  margin-bottom: 8px;
-  background-color: transparent;
-  white-space: nowrap;
+  flex-direction: column;
+  gap: 8px;
+  list-style-type: none;
+  padding: 18px;
+  height: 125px;
+  overflow-y: auto;
+  scrollbar-width: none;
 }
 
-.column_box {
+.inProgress_inner {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.inProgress_btn {
+  border: none;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  background-color: transparent;
+  transition: all 200ms ease-in-out;
+}
+.inProgress_btn:hover {
+  background-color: rgba(var(--button-color-modal), 0.05);
+}
+.inProgress_box {
   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   gap: 8px;
 }
-.column_text {
-  font-family: Poppins;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 21px;
-  letter-spacing: -0.02em;
+
+.inProgress_btn:hover .icon {
+  stroke: rgb(var(--button-color-modal));
+  transform: scale(1.1);
+}
+
+.inProgress_btn:hover .inProgress_text {
+  color: rgb(var(--button-color-modal));
+  transform: scale(1.1);
+}
+
+.activeButton .icon {
+  stroke: rgb(var(--button-color-modal));
+}
+.activeButton .inProgress_text {
+  color: rgb(var(--button-color-modal));
+}
+.inProgress_text {
   text-align: left;
-  text-underline-position: from-font;
-  text-decoration-skip-ink: none;
+  width: 90px;
+  overflow: hidden;
+
+  transition: all 200ms ease-in-out;
+  white-space: nowrap;
+  color: rgba(var(--text-color-mainboard), 0.5);
+}
+
+.icon {
+  margin-left: auto;
+  transition: all 200ms ease-in-out;
+  fill: none;
+  stroke: rgba(var(--text-color-mainboard), 0.5);
 }
