--- a/src/components/MainBoard/Card/Card.module.css
+++ b/src/components/MainBoard/Card/Card.module.css
@@ -10,7 +10,13 @@
   background-color: rgb(var(--button-color-mainboard));
   border-radius: 8px;
   overflow: hidden;
-  max-width: 334px;
+  max-width: 300px;
+}
+
+@media screen and (min-width: 375px) {
+  .taskContainer {
+    max-width: 334px;
+  }
 }
 
 .taskContainer::before {
